# AgenticAI-Langgraph

./: .gitignore  pyproject.toml
01_Sequential_Workflows/: 01_bmi_workflow.ipynb  02_simple_llm_workflow.ipynb  03_prompt_chaining.ipynb
02_Parallel_Workflows/: 01_batsman_workflow.ipynb  02_essay_evaluation.ipynb
03_Conditional_Workflows/: 01_quadratic_equation_workflow.ipynb  02_review_reply_workflow.ipynb
04_Iterative_Workflows/: 01_X_post_generator.ipynb
05_RAG_based_chatbot/: 01_chatbot.ipynb  02_persistance.ipynb
06_Chatbot_With_Streamlit_UI/: README.md  langgraph_backend.py  streamlit_frontend.py  streamlit_frontend_streaming.py
07_Chatbot_With_Memory/: README.md  langgraph_chatbot_backend.py  streamlit_frontend_with_memory.py
08_Chatbot_With_Persistent_Memory/: chatbot_persistent_memory_backend.py  chatbot_persistent_memory_frontend.py
09_Chatbot_With_Tools/: 01_tools.ipynb  chatbot_tools_backend.py  chatbot_tools_frontend.py
10_MCP_Client_With_LangGraph/: README.md  backend_mcp.py  frontend_mcp.py  mcp_server.py
11_RAG_Chatbot/: README.md  Simple_RAG.ipynb
12_Human_In_The_Loop/: chatbot_with_hitl.py  hitl.ipynb
13_Subgraph/: 01_subgraph_separate_state.ipynb  02_subgraph_shared_state.ipynb
14_Short_Term_Memory/: 01_stm_postgres.ipynb  02_stm_trimming.ipynb  03_stm_summarization.ipynb
15_Long_Term_Memory/: 01_ltm_basics.ipynb  02_ltm_implementation.ipynb  03_ltm_with_postgres.ipynb
