[project]
name = "agenticai-langgraph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ddgs>=9.12.1",
    "dotenv>=0.9.9",
    "faiss-cpu>=1.13.2",
    "fastmcp>=3.2.0",
    "langchain>=1.2.13",
    "langchain-community>=0.4.1",
    "langchain-mcp-adapters>=0.2.2",
    "langchain-openai>=1.1.12",
    "langgraph>=1.1.3",
    "langgraph-checkpoint-sqlite>=3.0.3",
    "pymupdf>=1.27.2.2",
    "pypdf>=6.9.2",
    "streamlit>=1.55.0",
]
